# kravy

./: README.md  pyproject.toml
examples/: random_players.py
kravy/: __init__.py  game.py  players.py
