
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kravy"
version = "0.0.1"
authors = [
  { name="Libor Wagner", email="libor.wagner@cvut.cz" },
]
description = "A 6 nimmt game implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/liborw/kravy"
"Bug Tracker" = "https://github.com/liborw/kravy"
